Fix horizontal scroll in showcase section

--- a/css/style.css
+++ b/css/style.css
@@ -926,7 +926,7 @@ a {
 /* block-showcase */
 
 .block-showcase {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 96%);
 }
 
 .block-showcase.block {
@@ -941,7 +941,7 @@ a {
   margin-bottom: 6rem;
 }
 
-.block-showcase__image {
+.block-showcase__image img {
   width: 100%;
 }
 
